# Restaurant-Agent

./: .gitignore  Dockerfile  README.md  livekit.toml  pyproject.toml  restaurant_main.py  view_logs.py
restaurant_agent/: __init__.py
restaurant_agent/agents/: __init__.py  base_agent.py  greeter.py  order_agent.py  reservation_agent.py
restaurant_agent/config/: reservation_config.py  settings.py
restaurant_agent/helpers/: __init__.py  stt_corrections.py
restaurant_agent/models/: __init__.py  customer.py  order.py  reservation.py
restaurant_agent/services/: __init__.py  database.py  menu_service.py  reservation_service.py
